change panel-header height to auto, add hidden and display classes, fix horizontal scrollbar at infracontainer on certain resolutions

--- a/Dashboard/src/App.css
+++ b/Dashboard/src/App.css
@@ -153,7 +153,7 @@ PANELS
   color: #ecf0f1;
   font-size: 1.6rem;
   background-color: #2c3e50;
-  height: 8rem;
+  height: auto;
 }
 
 .panel-title {
@@ -595,6 +595,21 @@ SPINNER
 RESPONSIVE DESIGN
 ======================================
 */
+.visible {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
+
+/*
+======================================
+DISPLAY CLASSES
+======================================
+*/
+
 @media only screen and (min-width: 2400px) {
   .panel-container {
     font-size: 1.2rem;
@@ -726,8 +741,14 @@ RESPONSIVE DESIGN
   }
 }
 
+@media only screen and (max-width: 430px) {
+  .panel-content {
+    font-size: 1.5rem;
+  }
+}
+
 /* IPHONE 5/SE */
-@media only screen and (max-width: 365px) {
+@media only screen and (max-width: 375px) {
   header {
     font-size: 1.25rem;
   }
@@ -735,4 +756,24 @@ RESPONSIVE DESIGN
   .panel-container {
     width: 90vw;
   }
+
+  .panel-content {
+    font-size: 1.4rem;
+  }
 }
+
+
+@media only screen and (max-width: 340px) {
+  header {
+    font-size: 1.25rem;
+  }
+
+  .panel-container {
+    width: 90vw;
+  }
+
+  .panel-content {
+    font-size: 1.32rem;
+  }
+}
+
